Fixes failure to set Credentials when using Bolt protocol in URI (#235).
* Changed URL to URI in setURI() in order to avoid exception for 'bolt' scheme
* Replaced protocol from URL to URI scheme in determineDefaultDriverName()

(cherry picked from commit 414e0d8)